@@ -1,3 +1,5 @@
+2375.   [security]      Fully randomize UDP query ports to improve
+			forgery resilience. [RT #17949]
 
 	--- 9.3.2-P2 released ---
 
